--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="icon" href="https://jorgepeniaranda.me/img/favicon.ico" />
+    <link rel="icon" href="https://jorgepeniaranda.me/favicon.ico" />
     <link rel="stylesheet" href="style.css" />
     <title>Jorge Peñaranda</title>
   </head>
