--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Redirect page to Jorge Peñaranda's portfolio"
+    />
     <link rel="icon" href="https://jorgepeniaranda.me/img/favicon.ico" />
     <link rel="stylesheet" href="style.css" />
     <title>Jorge Peñaranda</title>
   </head>
   <body>
-    <a href="https://jorgepeniaranda.me/" />
+    <a href="https://jorgepeniaranda.me/" aria-label="Go to Porfolio" />
   </body>
 </html>
