optimize polar gif

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <title>Jorge Peñaranda</title>
   </head>
   <body>
-    <a href="https://jorgepeniaranda.me/" aria-label="Go to Porfolio" />
+    <a href="https://jorgepeniaranda.me/" aria-label="Go to Porfolio">
+      <video src="./polar.webm" autoplay muted loop></video>
+    </a>
   </body>
 </html>
