fix external link

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <a href="https://jorgepeniaranda.me/" aria-label="Go to Porfolio">
-      <video src="./polar.webm" autoplay muted loop></video>
+      <video src="polar.webm" autoplay muted loop></video>
     </a>
   </body>
 </html>
