--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       name="description"
       content="Redirect page to Jorge Peñaranda's portfolio"
     />
+    <link rel="preconnect" href="https://jorgepeniaranda.me" />
     <link rel="icon" href="https://jorgepeniaranda.me/favicon.ico" />
     <link rel="stylesheet" href="style.css" />
     <title>Jorge Peñaranda</title>
