refactor: Minify HTML code

--- a/index.html
+++ b/index.html
@@ -1,20 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="description"
-      content="Redirect page to Jorge Peñaranda's portfolio"
-    />
-    <link rel="preconnect" href="https://jorgepeniaranda.me" />
-    <link rel="icon" href="https://jorgepeniaranda.me/favicon.ico" />
-    <link rel="stylesheet" href="style.css" />
-    <title>Jorge Peñaranda</title>
-  </head>
-  <body>
-    <a href="https://jorgepeniaranda.me/" aria-label="Go to Porfolio">
-      <video src="polar.webm" autoplay muted loop></video>
-    </a>
-  </body>
-</html>
+<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1"><title>Jorge Peñaranda</title><link rel="preconnect" href="https://jorgepeniaranda.me"><meta name="description" content="Redirect to Jorge Peñaranda's portfolio"><link rel="icon" href="https://jorgepeniaranda.me/favicon.ico"></head><body><a href="https://jorgepeniaranda.me/" aria-label="Go to Porfolio"><video src="polar.mp4" autoplay muted loop></video></a><style>body{margin:0;padding:0}a{display:flex;width:100vw;height:100vh;background:oklch(0 0 0)}video{width:80%;margin:auto;animation:.5s forwards onLoad}@keyframes onLoad{from{transform:scale(.1)}to{transform:scale(1)}}@media (width > 720px){video{width:30%}}</style></body></html>
